--- a/ComparaYa/PlaneadorCompra.xaml
+++ b/ComparaYa/PlaneadorCompra.xaml
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+﻿<ContentPage
     x:Class="ComparaYa.PlaneadorCompra"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ComparaYa"
     xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
+    BackgroundColor="White"
     NavigationPage.HasNavigationBar="False">
     <ContentPage.IconImageSource>
         <FileImageSource File="buy.png" />
@@ -18,7 +18,6 @@
             FontSize="22"
             HorizontalTextAlignment="Center"
             TextColor="Black" />
-
         <CollectionView ItemsSource="{x:Static local:App.Carrito}">
             <CollectionView.EmptyView>
                 <StackLayout VerticalOptions="CenterAndExpand">
@@ -39,11 +38,8 @@
                         TextColor="DimGray" />
                 </StackLayout>
             </CollectionView.EmptyView>
-
             <CollectionView.ItemTemplate>
-
                 <DataTemplate>
-
                     <FlexLayout
                         Padding="4"
                         AlignItems="Center"
@@ -56,100 +52,157 @@
                             BackgroundColor="Transparent"
                             HeightRequest="200"
                             Source="{Binding imagen_url}"
-                            WidthRequest="250" />
+                            WidthRequest="250">
+                            <Image.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped_1" />
+                            </Image.GestureRecognizers>
+                        </Image>
                         <Frame
                             Margin="10"
-                            Padding="10"
                             BackgroundColor="White"
                             CornerRadius="9"
                             WidthRequest="320">
-                            <StackLayout VerticalOptions="FillAndExpand">
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+
+                                <Label
+                                    Grid.Row="0"
+                                    FontFamily="PP"
+                                    FontSize="14"
+                                    HorizontalTextAlignment="Center"
+                                    Text="{Binding nombre}"
+                                    TextColor="#4A4A4A"
+                                    VerticalTextAlignment="Center" />
+
+                                <Label
+                                    x:Name="priced1"
+                                    Grid.Row="1"
+                                    FontSize="14"
+                                    HorizontalOptions="Center"
+                                    HorizontalTextAlignment="Center"
+                                    VerticalTextAlignment="Center">
+                                    <Label.Text>
+                                        <Binding Path="precio_d1" StringFormat="Precio D1: {0}" />
+                                    </Label.Text>
+                                    <Label.Triggers>
+                                        <DataTrigger
+                                            Binding="{Binding precio_d1}"
+                                            TargetType="Label"
+                                            Value="0">
+                                            <Setter Property="IsVisible" Value="False" />
+                                        </DataTrigger>
+                                    </Label.Triggers>
+                                </Label>
+
+                                <Label
+                                    x:Name="priceolim"
+                                    Grid.Row="2"
+                                    FontSize="14"
+                                    HorizontalOptions="Center"
+                                    HorizontalTextAlignment="Center"
+                                    VerticalTextAlignment="Center">
+                                    <Label.Text>
+                                        <Binding Path="precio_olim" StringFormat="Precio Olimpica: {0}" />
+                                    </Label.Text>
+                                    <Label.Triggers>
+                                        <DataTrigger
+                                            Binding="{Binding precio_olim}"
+                                            TargetType="Label"
+                                            Value="0">
+                                            <Setter Property="IsVisible" Value="False" />
+                                        </DataTrigger>
+                                    </Label.Triggers>
+                                </Label>
+
+                                <Label
+                                    x:Name="priceexito"
+                                    Grid.Row="3"
+                                    FontFamily="PP"
+                                    FontSize="15"
+                                    HorizontalOptions="CenterAndExpand"
+                                    TextColor="Black"
+                                    TextDecorations="Underline"
+                                    VerticalOptions="End"
+                                    VerticalTextAlignment="Center">
+                                    <Label.Text>
+                                        <Binding Path="precio_exito" StringFormat="Precio Exito: {0}" />
+                                    </Label.Text>
+                                    <Label.Triggers>
+                                        <DataTrigger
+                                            Binding="{Binding precio_exito}"
+                                            TargetType="Label"
+                                            Value="0">
+                                            <Setter Property="IsVisible" Value="False" />
+                                        </DataTrigger>
+                                    </Label.Triggers>
+                                </Label>
+                                <StackLayout
+                                    Grid.Row="5"
+                                    HorizontalOptions="FillAndExpand"
+                                    Orientation="Horizontal">
 
 
-                                <StackLayout VerticalOptions="CenterAndExpand">
-                                    <Label
-                                        FontFamily="PPI"
-                                        FontSize="15"
-                                        HorizontalTextAlignment="Center"
-                                        Text="{Binding nombre}"
-                                        TextColor="#4A4A4A"
-                                        VerticalTextAlignment="Center" />
-                                    <Label
-                                        x:Name="priced1"
-                                        FontSize="14"
+                                    <Button
+                                        Margin="5"
+                                        BackgroundColor="White"
+                                        BorderColor="Gray"
+                                        BorderWidth="1"
+                                        Clicked="Button_Clicked_1"
+                                        CornerRadius="20"
+                                        HeightRequest="20"
                                         HorizontalOptions="Center"
-                                        HorizontalTextAlignment="Center"
-                                        VerticalTextAlignment="Center">
-                                        <Label.Text>
-                                            <Binding Path="precio_d1" StringFormat="Precio D1: {0}" />
-                                        </Label.Text>
-                                        <Label.Triggers>
-                                            <DataTrigger
-                                                Binding="{Binding precio_d1}"
-                                                TargetType="Label"
-                                                Value="0">
-                                                <Setter Property="IsVisible" Value="False" />
-                                            </DataTrigger>
-                                        </Label.Triggers>
-                                    </Label>
-                                    <Label
-                                        x:Name="priceolim"
-                                        FontSize="14"
+                                        Text="+"
+                                        WidthRequest="30" />
+                                    <Button
+                                        x:Name="cantidad"
+                                        Margin="5"
+                                        BackgroundColor="White"
+                                        BorderColor="Gray"
+                                        BorderWidth="1"
+                                        CornerRadius="10"
+                                        HeightRequest="45"
                                         HorizontalOptions="Center"
-                                        HorizontalTextAlignment="Center"
-                                        VerticalTextAlignment="Center">
-                                        <Label.Text>
-                                            <Binding Path="precio_olim" StringFormat="Precio Olimpica: {0}" />
-                                        </Label.Text>
-                                        <Label.Triggers>
-                                            <DataTrigger
-                                                Binding="{Binding precio_olim}"
-                                                TargetType="Label"
-                                                Value="0">
-                                                <Setter Property="IsVisible" Value="False" />
-                                            </DataTrigger>
-                                        </Label.Triggers>
-                                    </Label>
+                                        Text="{Binding cantidad}"
+                                        WidthRequest="40" />
 
-                                    <Label
-                                        x:Name="priceexito"
-                                        FontFamily="PP"
-                                        FontSize="15"
-                                        HorizontalOptions="CenterAndExpand"
-                                        TextColor="Black"
-                                        TextDecorations="Underline"
-                                        VerticalOptions="End"
-                                        VerticalTextAlignment="Center">
-                                        <Label.Text>
-                                            <Binding Path="precio_exito" StringFormat="Precio Exito: {0}" />
-                                        </Label.Text>
-                                        <Label.Triggers>
-                                            <DataTrigger
-                                                Binding="{Binding precio_exito}"
-                                                TargetType="Label"
-                                                Value="0">
-                                                <Setter Property="IsVisible" Value="False" />
-                                            </DataTrigger>
-                                        </Label.Triggers>
-                                    </Label>
+                                    <Button
+                                        Margin="5"
+                                        BackgroundColor="White"
+                                        BorderColor="Gray"
+                                        BorderWidth="1"
+                                        Clicked="Button_Clicked"
+                                        CornerRadius="20"
+                                        HeightRequest="45"
+                                        HorizontalOptions="Center"
+                                        Text="-"
+                                        WidthRequest="35" />
+
+
                                     <lottie:AnimationView
-                                        x:Name="delete"
+                                        x:Name="deletexd"
+                                        Grid.Row="4"
                                         Animation="deleteAni.json"
                                         AutoPlay="True"
                                         Clicked="delete_Clicked"
                                         HeightRequest="60"
                                         HorizontalOptions="EndAndExpand"
-                                        RepeatMode="Infinite"
-                                        VerticalOptions="Fill"
+                                        RepeatCount="2"
+                                        RepeatMode="Restart"
+                                        VerticalOptions="EndAndExpand"
                                         WidthRequest="60" />
                                 </StackLayout>
 
-                            </StackLayout>
+                            </Grid>
                         </Frame>
-
-
                     </FlexLayout>
-
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
