--- a/ComparaYa/Views/LoginPage.xaml
+++ b/ComparaYa/Views/LoginPage.xaml
@@ -3,66 +3,84 @@
     x:Class="ComparaYa.LoginPage"
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    Background="#f7f7f7"
+    xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
+    BackgroundColor="White"
     NavigationPage.HasNavigationBar="False">
-
-    <StackLayout
-        Padding="40"
-        HorizontalOptions="FillAndExpand"
-        VerticalOptions="Center">
-        <Image
-            Margin="0,0,0,25"
-            Aspect="AspectFit"
-            HeightRequest="100"
-            Source="xd.png"
-            WidthRequest="100" />
-        <Label
-            Margin="15"
-            FontAttributes="Bold"
-            FontFamily="PPI"
-            FontSize="30"
-            HorizontalTextAlignment="Center"
-            Text="Iniciar sesion"
-            TextColor="#5c5c5c" />
-
-        <Entry
-            x:Name="email"
-            Margin="10"
-            IsTextPredictionEnabled="True"
-            Placeholder="email"
-            PlaceholderColor="Gray"
-            TextColor="Black" />
-        <Entry
-            x:Name="passw"
-            Margin="10"
-            IsPassword="True"
-            Placeholder="Contraseña"
-            PlaceholderColor="Gray"
-            TextColor="Black" />
-        <Button
-            Margin="20"
-            Padding="10"
-            BackgroundColor="#5c5c5c"
-            Clicked="LogIn"
-            CornerRadius="50"
-            Text="Ingresar"
-            TextColor="White"
-            VerticalOptions="Center" />
+    <Grid>
         <StackLayout
-            HorizontalOptions="Center"
-            Orientation="Horizontal"
-            Spacing="5"
+            Padding="40"
+            HorizontalOptions="FillAndExpand"
             VerticalOptions="Center">
-            <Label Text="¿No tienes una cuenta?" TextColor="#9e9e9e" />
+            <Image
+                Margin="0,0,0,25"
+                Aspect="AspectFit"
+                HeightRequest="100"
+                Source="xd.png"
+                WidthRequest="100" />
             <Label
-                x:Name="registrarteLabel"
-                Text="Registrarte"
+                Margin="10"
+                FontFamily="PP"
+                FontSize="24"
+                HorizontalTextAlignment="Center"
+                Text="Iniciar sesion"
                 TextColor="#5c5c5c"
-                TextDecorations="Underline" />
+                TextTransform="Uppercase" />
+
+            <Entry
+                x:Name="email"
+                Margin="10"
+                IsTextPredictionEnabled="True"
+                Placeholder="email"
+                PlaceholderColor="Gray"
+                TextColor="Black" />
+            <Entry
+                x:Name="passw"
+                Margin="10"
+                IsPassword="True"
+                Placeholder="Contraseña"
+                PlaceholderColor="Gray"
+                TextColor="Black" />
+
+            <Button
+                Margin="20"
+                Padding="10"
+                BackgroundColor="White"
+                BorderColor="Gray"
+                BorderWidth="1"
+                Clicked="LogIn"
+                CornerRadius="50"
+                Text="Ingresar"
+                TextColor="Black"
+                VerticalOptions="Center" />
+            <StackLayout
+                HorizontalOptions="Center"
+                Orientation="Horizontal"
+                Spacing="5"
+                VerticalOptions="Center">
+                <Label Text="¿No tienes una cuenta?" TextColor="#9e9e9e" />
+                <Label
+                    x:Name="registrarteLabel"
+                    Text="Registrarte"
+                    TextColor="#5c5c5c"
+                    TextDecorations="Underline" />
+            </StackLayout>
+
         </StackLayout>
-
-
-
-    </StackLayout>
-
+        <BoxView
+            x:Name="backdark"
+            IsVisible="false"
+            Opacity="0.4"
+            Color="Black" />
+        <AbsoluteLayout HorizontalOptions="Center" VerticalOptions="Center">
+            <lottie:AnimationView
+                x:Name="load"
+                Animation="load.json"
+                AutoPlay="True"
+                HeightRequest="110"
+                HorizontalOptions="Center"
+                IsVisible="false"
+                RepeatMode="Infinite"
+                WidthRequest="110" />
+        </AbsoluteLayout>
+    </Grid>
 </ContentPage>
