--- a/ComparaYa/Views/MainTabs.xaml
+++ b/ComparaYa/Views/MainTabs.xaml
@@ -5,13 +5,14 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:android="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
     xmlns:local="clr-namespace:ComparaYa"
+    Padding="2"
     android:TabbedPage.ToolbarPlacement="Bottom"
-    BarBackgroundColor=" #f4f4f4"
+    BarBackgroundColor="#f4f4f4"
     BarTextColor="Black"
-    NavigationPage.HasBackButton="False"
     NavigationPage.HasNavigationBar="False">
-    <!--  Pages can be added as references or inline  -->
+
     <local:ProductsView Title="Productos" />
     <local:PlaneadorCompra Title="Carrito" />
     <local:UserPage Title="Usuario" />
+
 </TabbedPage>
