--- a/ComparaYa/Views/ProductsView.xaml
+++ b/ComparaYa/Views/ProductsView.xaml
@@ -5,18 +5,19 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ComparaYa"
     xmlns:lottie="clr-namespace:Lottie.Forms;assembly=Lottie.Forms"
-    BackgroundColor=" #fdfdff"
+    BackgroundColor="#fdfdff"
     NavigationPage.HasNavigationBar="False">
 
     <ContentPage.IconImageSource>
         <FileImageSource File="home.png" />
     </ContentPage.IconImageSource>
+
     <Grid>
-        <Grid Margin="15">
+        <Grid Margin="10,15,10,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="80" />
                 <RowDefinition Height="80" />
-                <RowDefinition Height="50" />
+                <RowDefinition Height="60" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
@@ -24,10 +25,10 @@
 
             <FlexLayout
                 Grid.Row="0"
-                Margin="7"
                 AlignItems="Center"
                 JustifyContent="SpaceBetween">
                 <Label
+                    Margin="15"
                     FontFamily="PPI"
                     FontSize="25"
                     Text="Explora productos"
@@ -35,6 +36,7 @@
 
 
                 <lottie:AnimationView
+                    Margin="10"
                     Animation="filtersAni.json"
                     AutoPlay="True"
                     Clicked="AnimationView_Clicked"
@@ -55,7 +57,7 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <FlexLayout
-                            Margin="5"
+                            Margin="3"
                             AlignItems="Center"
                             BackgroundColor="Transparent"
                             JustifyContent="SpaceEvenly">
@@ -65,7 +67,7 @@
                                 BorderColor="Gray"
                                 BorderWidth="2"
                                 Clicked="Button_Clicked"
-                                CornerRadius="13"
+                                CornerRadius="20"
                                 HeightRequest="42"
                                 Text="{Binding nombre}"
                                 TextColor="#020202" />
@@ -76,17 +78,19 @@
 
             <FlexLayout
                 Grid.Row="2"
+                AlignItems="Center"
                 Direction="Column"
                 JustifyContent="Center">
                 <SearchBar
-                    Margin="3,0,3,10"
+                    Margin="3,0,3,20"
                     CancelButtonColor="#757575"
                     HeightRequest="40"
                     HorizontalOptions="FillAndExpand"
                     Placeholder="Ej: Arroz"
                     PlaceholderColor="#9E9E9E"
                     TextChanged="SearchBar_TextChanged"
-                    TextColor="Black" />
+                    TextColor="Black"
+                    VerticalOptions="FillAndExpand" />
             </FlexLayout>
 
             <CollectionView
@@ -99,7 +103,7 @@
                         HorizontalItemSpacing="20"
                         Orientation="Vertical"
                         Span="2"
-                        VerticalItemSpacing="20" />
+                        VerticalItemSpacing="15" />
                 </CollectionView.ItemsLayout>
                 <CollectionView.Footer>
                     <ActivityIndicator
@@ -114,7 +118,7 @@
                         <StackLayout
                             BackgroundColor="Transparent"
                             HorizontalOptions="FillAndExpand"
-                            VerticalOptions="CenterAndExpand">
+                            VerticalOptions="FillAndExpand">
                             <Frame
                                 Margin="4"
                                 Padding="12"
@@ -141,11 +145,13 @@
                                             TextColor="#4A4A4A" />
                                         <Label
                                             x:Name="priced1"
+                                            FontFamily="PPI"
                                             FontSize="14"
                                             HorizontalOptions="Center"
-                                            HorizontalTextAlignment="Center">
+                                            HorizontalTextAlignment="Center"
+                                            TextColor="Black">
                                             <Label.Text>
-                                                <Binding Path="precio_d1" StringFormat="Precio D1: {0}" />
+                                                <Binding Path="precio_d1" StringFormat="D1: ${0}" />
                                             </Label.Text>
                                             <Label.Triggers>
                                                 <DataTrigger
@@ -158,11 +164,13 @@
                                         </Label>
                                         <Label
                                             x:Name="priceolim"
+                                            FontFamily="PPI"
                                             FontSize="14"
                                             HorizontalOptions="Center"
-                                            HorizontalTextAlignment="Center">
+                                            HorizontalTextAlignment="Center"
+                                            TextColor="Black">
                                             <Label.Text>
-                                                <Binding Path="precio_olim" StringFormat="Precio Olimpica: {0}" />
+                                                <Binding Path="precio_olim" StringFormat="Olimpica: ${0}" />
                                             </Label.Text>
                                             <Label.Triggers>
                                                 <DataTrigger
@@ -177,13 +185,13 @@
                                         <Label
                                             x:Name="priceexito"
                                             FontFamily="PPI"
-                                            FontSize="15"
+                                            FontSize="14"
                                             HorizontalOptions="CenterAndExpand"
                                             TextColor="Black"
                                             VerticalOptions="End"
                                             VerticalTextAlignment="Center">
                                             <Label.Text>
-                                                <Binding Path="precio_exito" StringFormat="Exito: {0}" />
+                                                <Binding Path="precio_exito" StringFormat="Exito: ${0}" />
                                             </Label.Text>
                                             <Label.Triggers>
                                                 <DataTrigger
@@ -231,7 +239,7 @@
                                     Aspect="AspectFill"
                                     HeightRequest="40"
                                     HorizontalOptions="FillAndExpand"
-                                    Source="nofav.png"
+                                    Source="{Binding FavoriteIcon}"
                                     VerticalOptions="FillAndExpand"
                                     WidthRequest="40">
                                     <Image.GestureRecognizers>
@@ -265,4 +273,5 @@
         </AbsoluteLayout>
 
     </Grid>
+
 </ContentPage>
